force-app/main/default/objects/Graduation_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Fee_Qty__c</fullName>
        <description>Number of attendance fees</description>
        <label>Attendance Fee Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_Fee_Unit_Amount__c</fullName>
        <description>Dollar amount of each attendance fee</description>
        <label>Attendance Fee Unit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calendar_Type__c</fullName>
        <description>Calendar__c.Type__c for the Application at the time of this payment</description>
        <label>Calendar Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Application__c</fullName>
        <description>Parent Graduation Application</description>
        <label>Graduation Application</label>
        <referenceTo>Graduation_Application__c</referenceTo>
        <relationshipLabel>Graduation Payments</relationshipLabel>
        <relationshipName>Graduation_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Any notes for this record that are not be included in external comms</description>
        <label>Internal Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Late_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Dollar amount of late fee</description>
        <label>Late Fee Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>System that triggered the creation of this record</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduation Portal</fullName>
                    <default>true</default>
                    <label>Graduation Portal</label>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Dollar amount of payment gateway fee</description>
        <label>Payment Gateway Fee Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <description>Receipt number from the payment origin</description>
        <externalId>true</externalId>
        <label>Receipt Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Refund_Reject_Reason__c</fullName>
        <description>Reason for rejecting a refund</description>
        <label>Refund Reject Reason</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <description>Status of the refund</description>
        <label>Refund Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Actioned</fullName>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Failed - Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Dollar amount that has been refunded from this record</description>
        <label>Refunded Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refunded_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment record being refunded</description>
        <label>Refunded Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Graduation_Payment__c.Type__c</field>
                <operation>equals</operation>
                <value>Charge</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Graduation_Payment__c</referenceTo>
        <relationshipLabel>Graduation Refunds</relationshipLabel>
        <relationshipName>Graduation_Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Document_Number__c</fullName>
        <description>Document number returned by SAP upon journaling</description>
        <label>SAP Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Request_Id__c</fullName>
        <description>SAP request Id generated by CRM upon journaling</description>
        <label>SAP Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sync_Date__c</fullName>
        <description>Time of journaling</description>
        <label>SAP Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stripe_Link__c</fullName>
        <description>Link to the Stripe transaction</description>
        <formula>IF(
	ISBLANK(Transaction_Id__c),
	&apos;&apos;,
	IF(
		TEXT(Type__c) = &apos;Charge&apos;,
		HYPERLINK(
			$Setup.URLs__c.Graduation_Portal_Stripe__c + &apos;/payments/&apos; + Transaction_Id__c, $Setup.URLs__c.Graduation_Portal_Stripe__c + &apos;/payments/&apos; + Transaction_Id__c,
			&apos;_blank&apos;
		),
		HYPERLINK(
			$Setup.URLs__c.Graduation_Portal_Stripe__c + &apos;/refunds/&apos; + Transaction_Id__c, $Setup.URLs__c.Graduation_Portal_Stripe__c + &apos;/refunds/&apos; + Transaction_Id__c,
			&apos;_blank&apos;
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stripe Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total dollar amount of the transaction</description>
        <label>Total Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Id_Short__c</fullName>
        <description>Truncated Transaction ID for submitting to SAP</description>
        <externalId>true</externalId>
        <label>Transaction Id (Short)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Transaction ID from the payment origin</description>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Charge or Refund</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Charge</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Graduation Payment</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Graduation_Application__c</columns>
        <columns>Transaction_Id__c</columns>
        <columns>Attendance_Fee_Unit_Amount__c</columns>
        <columns>Attendance_Fee_Qty__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Refunded_Payment__c</columns>
        <columns>Refund_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>External_Unprocessed_Refunds</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Origin__c</field>
            <operation>equals</operation>
            <value>External</value>
        </filters>
        <filters>
            <field>Refund_Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>External Unprocessed Refunds</label>
    </listViews>
    <nameField>
        <displayFormat>GPN-{000000}</displayFormat>
        <label>Graduation Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graduation Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>